# quicalc

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  about.hbs  about.toml  deny.toml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  build.yaml  ci.yaml
src/: main.rs
