[package]
name = "quicalc"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"

[features]
default = ["python"]
python = ["dep:pyo3"]
debug = ["iced/debug"]

[dependencies]
cfg-if = "1.0.4"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
global-hotkey = { version = "0.7.0", features = ["serde"] }
# iced = { version = "0.14.0", features = ["image"] }
# FIXME: temporarily use iced from git for the bugfix for high CPU usage when
# there are no visible windows (iced issue 2719) in 57b553d, switch back to
# regular releases once the fix is released (probably in iced 0.14).
iced = { git = "https://github.com/iced-rs/iced.git", rev = "efae3860bc3e2197eea39d30d756f93fb14c98d1", features = [
	"image",
] }
image = { version = "0.25.9", default-features = false, features = [
	"png",
] }
kalk = { version = "3.2.2", default-features = false }
pyo3 = { version = "0.27.2", optional = true, features = [
	"abi3",
	"auto-initialize",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
	"env-filter",
] }
tray-icon = "0.21.2"
