[package]
name = "quicalc"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[features]
default = ["python"]
python = ["dep:pyo3"]
debug = ["iced/debug"]

[dependencies]
cfg-if = "1.0.4"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
global-hotkey = { version = "0.7.0", features = ["serde"] }
iced = { version = "0.14.0", features = ["image"] }
image = { version = "0.25.9", default-features = false, features = [
	"png",
] }
kalk = { version = "3.2.2", default-features = false }
pyo3 = { version = "0.28.1", optional = true, features = [
	"abi3",
	"auto-initialize",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
	"env-filter",
] }
tray-icon = "0.21.3"
